--- a/1.html
+++ b/1.html
@@ -3,6 +3,15 @@
 <head>
   <title>고은석</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NG9J6NPCP8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NG9J6NPCP8');
+</script>
 </head>
 
 <body>
